--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   "license": "ISC",
   "dependencies": {
     "ejs": "^2.6.1",
-    "npm-run-all": "4.1.2"
+    "knex": "^0.15.2",
+    "npm-run-all": "4.1.2",
+    "pg": "^7.4.3"
   },
   "devDependencies": {
     "nodemon": "1.12.1"
