--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "ejs": "^2.6.1",
     "knex": "^0.15.2",
     "npm-run-all": "4.1.2",
+    "objection": "^1.2.2",
     "pg": "^7.4.3"
   },
   "devDependencies": {
